Create a React app and publish it to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://HajriHoussem.github.io/react-gh-pages.git",
+  "homepage": "https://HajriHoussem.github.io/react-gh-pages",
   "name": "projetreact",
   "version": "0.1.0",
   "private": true,
